# sphinx_parsed_codeblock

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy_docs.yml  run_tests.yml
docs/: rebuild_everything.bat  rebuild_html.bat
docs/source/: conf.py  examples.rst  explanation.rst  index.rst  installation.rst  source.rst
docs/source/examples/: formatting_clashes.rst  test.rst
sphinx_parsed_codeblock/: __init__.py  sphinx_parsed_codeblock.py
tests/: test_integration.py  test_units.py
tests/roots/test-integration/: conf.py  index.html  test.html  test.rst
