[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'sphinx_parsed_codeblock'
version = "0.1.0"
authors = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
maintainers = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
description = "Sphinx extension adding a directive for a parsed code-block "
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "sphinx >= 8.1.3",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.2",
]
docs = [
    "sphinx_rtd_theme >= 3.0.2",
]

[project.urls]
Repository = "https://github.com/RastislavTuranyi/sphinx_parsed_codeblock"
