[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'sphinx_parsed_codeblock'
version = "1.0.0"
authors = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
maintainers = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
description = "Sphinx extension adding a directive for a parsed code-block"
readme = "README.md"
license = {file = "LICENSE"}

keywords = [
    "Python",
    "docs",
    "documentation",
    "sphinx",
    "sphinx-extension",
    "parsed code-block",
    "code-block",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation :: Sphinx"
]

dependencies = [
    "sphinx >= 6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.2",
]
docs = [
    "sphinx_rtd_theme >= 3.0.2",
    "numpydoc == 1.10.0",
]

[project.urls]
Repository = "https://github.com/RastislavTuranyi/sphinx_parsed_codeblock"
Documentation = "https://rastislavturanyi.github.io/sphinx_parsed_codeblock"
Homepage = "https://rastislavturanyi.github.io/sphinx_parsed_codeblock"
Issues = "https://github.com/RastislavTuranyi/sphinx_parsed_codeblock/issues"
